A new colour scheme with the constant hue and increasing luminosity

--- a/trace-processing/showGraphs/style.css
+++ b/trace-processing/showGraphs/style.css
@@ -22,7 +22,7 @@ div.ib {
 }
 
 div.float-border {
-    border: solid green 1px;
+    border: solid teal 1px;
     margin: 1em;
     /* Floated for positioning */
     float: left;
